# rest is working now again and exception handling is easier now